@@ -12,6 +12,7 @@ Changes for 1.3.6
    Replaced lex/yacc code with custom preferences parser
       lex/yacc parser was having parse failures on some archs
    Allow MD2 texture coordinates to go outside of 0.0 to 1.0 range
+   Report error if MD2 has more than one assigned material
    Updated configuration for newer autoconf (2.61) and automake (1.9)
    Removed several unused modules
    Added script for making source code tags
